# serializer version: 1
# name: TestSavedSearches.test_details_delete_modal_content
  '''
  <div aria-labelledby="savedSearchesSettingsModalLabel" aria-modal="true" class="modal fade" id="savedSearchesSettingsModal" role="dialog" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered" id="savedSearchesSettingsModalContent">
          <div class="modal-content">
              <div class="modal-header">
                  <h3 class="modal-title" id="savedSearchesSettingsModalLabel">
                      Recherches enregistrées
                  </h3>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                  </button>
              </div>
              <div class="modal-body">
                  <ul class="list-unstyled">
                      <form class="js-prevent-multiple-submit" hx-indicator="#savedSearchesSettingsModalContent .modal-body" hx-post="/search/saved-searches/delete" hx-swap="outerHTML" hx-target="#savedSearchesSettingsModalContent">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <li class="d-flex lh-sm mb-3">
                              <div class="me-2">
                                  <i aria-hidden="true" class="ri-star-line text-muted">
                                  </i>
                              </div>
                              <div class="flex-grow-1">
                                  <strong class="fs-sm d-block">
                                      <a href="/search/employers/results?city=lyon-69&distance=50&kinds=ACI&kinds=EI&kinds=OPCS&departments=69&district_69=69001&district_69=69003">
                                          Grand Lyon
                                      </a>
                                  </strong>
                                  <span class="fs-xs">
                                      Lyon – Distance : 50 km – Types de structure : ACI, EI, OPCS – Département : 69 + 1 filtre
                                  </span>
                              </div>
                              <div>
                                  <button aria-label="Supprimer cette recherche" class="btn btn-danger btn-sm btn-ico-only" name="saved_search_id" value="[Pk of SavedSearch]">
                                      <i aria-hidden="true" class="ri-delete-bin-line fw-medium">
                                      </i>
                                  </button>
                              </div>
                          </li>
                      </form>
                  </ul>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestSavedSearches.test_display_saved_searches_and_delete_modal[/dashboard/][SQL queries]
  dict({
    'num_queries': 13,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."terms_accepted_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'get_active_company_memberships[utils/perms/middleware.py]',
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_companymembership"."id",
                 "companies_companymembership"."user_id",
                 "companies_companymembership"."joined_at",
                 "companies_companymembership"."is_admin",
                 "companies_companymembership"."is_active",
                 "companies_companymembership"."created_at",
                 "companies_companymembership"."updated_at",
                 "companies_companymembership"."company_id",
                 "companies_companymembership"."updated_by_id"
          FROM "companies_companymembership"
          WHERE ("companies_companymembership"."is_active"
                 AND "companies_companymembership"."user_id" = %s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'get_active_prescriber_memberships[utils/perms/middleware.py]',
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "prescribers_prescribermembership"."id",
                 "prescribers_prescribermembership"."user_id",
                 "prescribers_prescribermembership"."joined_at",
                 "prescribers_prescribermembership"."is_admin",
                 "prescribers_prescribermembership"."is_active",
                 "prescribers_prescribermembership"."created_at",
                 "prescribers_prescribermembership"."updated_at",
                 "prescribers_prescribermembership"."organization_id",
                 "prescribers_prescribermembership"."updated_by_id",
                 "prescribers_prescriberorganization"."id",
                 "prescribers_prescriberorganization"."address_line_1",
                 "prescribers_prescriberorganization"."address_line_2",
                 "prescribers_prescriberorganization"."post_code",
                 "prescribers_prescriberorganization"."city",
                 "prescribers_prescriberorganization"."department",
                 "prescribers_prescriberorganization"."coords",
                 "prescribers_prescriberorganization"."geocoding_score",
                 "prescribers_prescriberorganization"."geocoding_updated_at",
                 "prescribers_prescriberorganization"."ban_api_resolved_address",
                 "prescribers_prescriberorganization"."insee_city_id",
                 "prescribers_prescriberorganization"."name",
                 "prescribers_prescriberorganization"."created_at",
                 "prescribers_prescriberorganization"."updated_at",
                 "prescribers_prescriberorganization"."uid",
                 "prescribers_prescriberorganization"."active_members_email_reminder_last_sent_at",
                 "prescribers_prescriberorganization"."automatic_geocoding_update",
                 "prescribers_prescriberorganization"."siret",
                 "prescribers_prescriberorganization"."kind",
                 "prescribers_prescriberorganization"."is_brsa",
                 "prescribers_prescriberorganization"."phone",
                 "prescribers_prescriberorganization"."email",
                 "prescribers_prescriberorganization"."website",
                 "prescribers_prescriberorganization"."description",
                 "prescribers_prescriberorganization"."code_safir_pole_emploi",
                 "prescribers_prescriberorganization"."created_by_id",
                 "prescribers_prescriberorganization"."authorization_status",
                 "prescribers_prescriberorganization"."authorization_updated_at",
                 "prescribers_prescriberorganization"."authorization_updated_by_id",
                 "prescribers_prescriberorganization"."is_gps_authorized"
          FROM "prescribers_prescribermembership"
          INNER JOIN "prescribers_prescriberorganization" ON ("prescribers_prescribermembership"."organization_id" = "prescribers_prescriberorganization"."id")
          WHERE ("prescribers_prescribermembership"."is_active"
                 AND "prescribers_prescribermembership"."user_id" = %s)
          ORDER BY "prescribers_prescribermembership"."joined_at" ASC
        ''',
      }),
      dict({
        'origin': list([
          'get_active_institution_memberships[utils/perms/middleware.py]',
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "institutions_institutionmembership"."id",
                 "institutions_institutionmembership"."user_id",
                 "institutions_institutionmembership"."joined_at",
                 "institutions_institutionmembership"."is_admin",
                 "institutions_institutionmembership"."is_active",
                 "institutions_institutionmembership"."created_at",
                 "institutions_institutionmembership"."updated_at",
                 "institutions_institutionmembership"."institution_id",
                 "institutions_institutionmembership"."updated_by_id",
                 "institutions_institution"."id",
                 "institutions_institution"."address_line_1",
                 "institutions_institution"."address_line_2",
                 "institutions_institution"."post_code",
                 "institutions_institution"."city",
                 "institutions_institution"."department",
                 "institutions_institution"."coords",
                 "institutions_institution"."geocoding_score",
                 "institutions_institution"."geocoding_updated_at",
                 "institutions_institution"."ban_api_resolved_address",
                 "institutions_institution"."insee_city_id",
                 "institutions_institution"."name",
                 "institutions_institution"."created_at",
                 "institutions_institution"."updated_at",
                 "institutions_institution"."uid",
                 "institutions_institution"."active_members_email_reminder_last_sent_at",
                 "institutions_institution"."automatic_geocoding_update",
                 "institutions_institution"."kind"
          FROM "institutions_institutionmembership"
          INNER JOIN "institutions_institution" ON ("institutions_institutionmembership"."institution_id" = "institutions_institution"."id")
          WHERE ("institutions_institutionmembership"."is_active"
                 AND "institutions_institutionmembership"."user_id" = %s)
          ORDER BY "institutions_institutionmembership"."joined_at" ASC
        ''',
      }),
      dict({
        'origin': list([
          'get_service_users[nexus/utils.py]',
          'dropdown_status[nexus/utils.py]',
          'DropDownMiddleware.__call__[nexus/middleware.py]',
        ]),
        'sql': '''
          SELECT "nexus_nexususer"."id",
                 "nexus_nexususer"."source",
                 "nexus_nexususer"."source_id",
                 "nexus_nexususer"."source_kind",
                 "nexus_nexususer"."first_name",
                 "nexus_nexususer"."last_name",
                 "nexus_nexususer"."email",
                 "nexus_nexususer"."phone",
                 "nexus_nexususer"."last_login",
                 "nexus_nexususer"."auth",
                 "nexus_nexususer"."kind",
                 "nexus_nexususer"."updated_at",
                 COALESCE(
                            (SELECT U0."valid_since" AS "valid_since"
                             FROM "nexus_nexusressourcesyncstatus" U0
                             WHERE U0."service" = ("nexus_nexususer"."source")
                             ORDER BY RANDOM() ASC
                             LIMIT 1), %s) AS "_threshold"
          FROM "nexus_nexususer"
          WHERE ("nexus_nexususer"."updated_at" >= (COALESCE(
                                                               (SELECT U0."valid_since" AS "valid_since"
                                                                FROM "nexus_nexusressourcesyncstatus" U0
                                                                WHERE U0."service" = ("nexus_nexususer"."source")
                                                                ORDER BY RANDOM() ASC
                                                                LIMIT 1), %s))
                 AND "nexus_nexususer"."email" = %s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'get_service_users[nexus/utils.py]',
          'dropdown_status[nexus/utils.py]',
          'DropDownMiddleware.__call__[nexus/middleware.py]',
        ]),
        'sql': '''
          SELECT "nexus_activatedservice"."id",
                 "nexus_activatedservice"."user_id",
                 "nexus_activatedservice"."service",
                 "nexus_activatedservice"."created_at"
          FROM "nexus_activatedservice"
          WHERE "nexus_activatedservice"."user_id" = %s
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'dropdown_status[nexus/utils.py]',
          'DropDownMiddleware.__call__[nexus/middleware.py]',
        ]),
        'sql': '''
          (
             (SELECT %s AS "a"
              FROM "companies_companymembership"
              INNER JOIN "users_user" ON ("companies_companymembership"."user_id" = "users_user"."id")
              INNER JOIN "companies_company" ON ("companies_companymembership"."company_id" = "companies_company"."id")
              WHERE ("users_user"."is_active"
                     AND "companies_companymembership"."is_active"
                     AND "companies_company"."department" IN (%s,
                                                              %s,
                                                              %s,
                                                              %s,
                                                              %s,
                                                              %s,
                                                              %s,
                                                              %s)
                     AND "users_user"."email" = %s))
           UNION
             (SELECT %s AS "a"
              FROM "prescribers_prescribermembership"
              INNER JOIN "users_user" ON ("prescribers_prescribermembership"."user_id" = "users_user"."id")
              INNER JOIN "prescribers_prescriberorganization" ON ("prescribers_prescribermembership"."organization_id" = "prescribers_prescriberorganization"."id")
              WHERE ("users_user"."is_active"
                     AND "prescribers_prescribermembership"."is_active"
                     AND "prescribers_prescriberorganization"."department" IN (%s,
                                                                               %s,
                                                                               %s,
                                                                               %s,
                                                                               %s,
                                                                               %s,
                                                                               %s,
                                                                               %s)
                     AND "users_user"."email" = %s)))
          UNION
            (SELECT %s AS "a"
             FROM "nexus_nexusmembership"
             INNER JOIN "nexus_nexusstructure" ON ("nexus_nexusmembership"."structure_id" = "nexus_nexusstructure"."id")
             INNER JOIN "nexus_nexususer" ON ("nexus_nexusmembership"."user_id" = "nexus_nexususer"."id")
             WHERE ("nexus_nexusmembership"."updated_at" >= (COALESCE(
                                                                        (SELECT U0."valid_since" AS "valid_since"
                                                                         FROM "nexus_nexusressourcesyncstatus" U0
                                                                         WHERE U0."service" = ("nexus_nexusmembership"."source")
                                                                         ORDER BY RANDOM() ASC
                                                                         LIMIT 1), %s))
                    AND "nexus_nexusstructure"."department" IN (%s,
                                                                %s,
                                                                %s,
                                                                %s,
                                                                %s,
                                                                %s,
                                                                %s,
                                                                %s)
                    AND "nexus_nexususer"."email" = %s))
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'add_city_name_attr[search/models.py]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "search_savedsearch"."id",
                 "search_savedsearch"."user_id",
                 "search_savedsearch"."name",
                 "search_savedsearch"."query_params",
                 "search_savedsearch"."created_at"
          FROM "search_savedsearch"
          WHERE "search_savedsearch"."user_id" = %s
          ORDER BY "search_savedsearch"."created_at" DESC
        ''',
      }),
      dict({
        'origin': list([
          'add_city_name_attr[search/models.py]',
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT "cities_city"."id",
                 "cities_city"."name",
                 "cities_city"."normalized_name",
                 "cities_city"."slug",
                 "cities_city"."department",
                 "cities_city"."post_codes",
                 "cities_city"."code_insee",
                 "cities_city"."coords",
                 "cities_city"."edition_mode",
                 "cities_city"."last_synced_at"
          FROM "cities_city"
          WHERE "cities_city"."slug" IN (%s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'dashboard[www/dashboard/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "users_user"
          WHERE EXISTS
              (SELECT %s AS "a"
               FROM "users_jobseekerassignment" U0
               INNER JOIN "users_user" U4 ON (U0."job_seeker_id" = U4."id")
               INNER JOIN "users_jobseekerprofile" U5 ON (U4."id" = U5."user_id")
               WHERE (((U0."company_id" IS NULL
                        AND U0."prescriber_organization_id" IS NULL
                        AND U0."professional_id" = %s)
                       OR (U0."company_id" IS NULL
                           AND U0."prescriber_organization_id" = %s
                           AND U0."professional_id" = %s))
                      AND U5."is_stalled"
                      AND NOT (U5."is_not_stalled_anymore"
                               AND U5."is_not_stalled_anymore" IS NOT NULL)
                      AND U0."job_seeker_id" = ("users_user"."id"))
               LIMIT 1)
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestSavedSearches.test_display_saved_searches_and_delete_modal[/search/employers/results][SQL queries]
  dict({
    'num_queries': 12,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."terms_accepted_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'get_active_company_memberships[utils/perms/middleware.py]',
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_companymembership"."id",
                 "companies_companymembership"."user_id",
                 "companies_companymembership"."joined_at",
                 "companies_companymembership"."is_admin",
                 "companies_companymembership"."is_active",
                 "companies_companymembership"."created_at",
                 "companies_companymembership"."updated_at",
                 "companies_companymembership"."company_id",
                 "companies_companymembership"."updated_by_id"
          FROM "companies_companymembership"
          WHERE ("companies_companymembership"."is_active"
                 AND "companies_companymembership"."user_id" = %s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'get_active_prescriber_memberships[utils/perms/middleware.py]',
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "prescribers_prescribermembership"."id",
                 "prescribers_prescribermembership"."user_id",
                 "prescribers_prescribermembership"."joined_at",
                 "prescribers_prescribermembership"."is_admin",
                 "prescribers_prescribermembership"."is_active",
                 "prescribers_prescribermembership"."created_at",
                 "prescribers_prescribermembership"."updated_at",
                 "prescribers_prescribermembership"."organization_id",
                 "prescribers_prescribermembership"."updated_by_id",
                 "prescribers_prescriberorganization"."id",
                 "prescribers_prescriberorganization"."address_line_1",
                 "prescribers_prescriberorganization"."address_line_2",
                 "prescribers_prescriberorganization"."post_code",
                 "prescribers_prescriberorganization"."city",
                 "prescribers_prescriberorganization"."department",
                 "prescribers_prescriberorganization"."coords",
                 "prescribers_prescriberorganization"."geocoding_score",
                 "prescribers_prescriberorganization"."geocoding_updated_at",
                 "prescribers_prescriberorganization"."ban_api_resolved_address",
                 "prescribers_prescriberorganization"."insee_city_id",
                 "prescribers_prescriberorganization"."name",
                 "prescribers_prescriberorganization"."created_at",
                 "prescribers_prescriberorganization"."updated_at",
                 "prescribers_prescriberorganization"."uid",
                 "prescribers_prescriberorganization"."active_members_email_reminder_last_sent_at",
                 "prescribers_prescriberorganization"."automatic_geocoding_update",
                 "prescribers_prescriberorganization"."siret",
                 "prescribers_prescriberorganization"."kind",
                 "prescribers_prescriberorganization"."is_brsa",
                 "prescribers_prescriberorganization"."phone",
                 "prescribers_prescriberorganization"."email",
                 "prescribers_prescriberorganization"."website",
                 "prescribers_prescriberorganization"."description",
                 "prescribers_prescriberorganization"."code_safir_pole_emploi",
                 "prescribers_prescriberorganization"."created_by_id",
                 "prescribers_prescriberorganization"."authorization_status",
                 "prescribers_prescriberorganization"."authorization_updated_at",
                 "prescribers_prescriberorganization"."authorization_updated_by_id",
                 "prescribers_prescriberorganization"."is_gps_authorized"
          FROM "prescribers_prescribermembership"
          INNER JOIN "prescribers_prescriberorganization" ON ("prescribers_prescribermembership"."organization_id" = "prescribers_prescriberorganization"."id")
          WHERE ("prescribers_prescribermembership"."is_active"
                 AND "prescribers_prescribermembership"."user_id" = %s)
          ORDER BY "prescribers_prescribermembership"."joined_at" ASC
        ''',
      }),
      dict({
        'origin': list([
          'get_active_institution_memberships[utils/perms/middleware.py]',
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "institutions_institutionmembership"."id",
                 "institutions_institutionmembership"."user_id",
                 "institutions_institutionmembership"."joined_at",
                 "institutions_institutionmembership"."is_admin",
                 "institutions_institutionmembership"."is_active",
                 "institutions_institutionmembership"."created_at",
                 "institutions_institutionmembership"."updated_at",
                 "institutions_institutionmembership"."institution_id",
                 "institutions_institutionmembership"."updated_by_id",
                 "institutions_institution"."id",
                 "institutions_institution"."address_line_1",
                 "institutions_institution"."address_line_2",
                 "institutions_institution"."post_code",
                 "institutions_institution"."city",
                 "institutions_institution"."department",
                 "institutions_institution"."coords",
                 "institutions_institution"."geocoding_score",
                 "institutions_institution"."geocoding_updated_at",
                 "institutions_institution"."ban_api_resolved_address",
                 "institutions_institution"."insee_city_id",
                 "institutions_institution"."name",
                 "institutions_institution"."created_at",
                 "institutions_institution"."updated_at",
                 "institutions_institution"."uid",
                 "institutions_institution"."active_members_email_reminder_last_sent_at",
                 "institutions_institution"."automatic_geocoding_update",
                 "institutions_institution"."kind"
          FROM "institutions_institutionmembership"
          INNER JOIN "institutions_institution" ON ("institutions_institutionmembership"."institution_id" = "institutions_institution"."id")
          WHERE ("institutions_institutionmembership"."is_active"
                 AND "institutions_institutionmembership"."user_id" = %s)
          ORDER BY "institutions_institutionmembership"."joined_at" ASC
        ''',
      }),
      dict({
        'origin': list([
          'get_service_users[nexus/utils.py]',
          'dropdown_status[nexus/utils.py]',
          'DropDownMiddleware.__call__[nexus/middleware.py]',
        ]),
        'sql': '''
          SELECT "nexus_nexususer"."id",
                 "nexus_nexususer"."source",
                 "nexus_nexususer"."source_id",
                 "nexus_nexususer"."source_kind",
                 "nexus_nexususer"."first_name",
                 "nexus_nexususer"."last_name",
                 "nexus_nexususer"."email",
                 "nexus_nexususer"."phone",
                 "nexus_nexususer"."last_login",
                 "nexus_nexususer"."auth",
                 "nexus_nexususer"."kind",
                 "nexus_nexususer"."updated_at",
                 COALESCE(
                            (SELECT U0."valid_since" AS "valid_since"
                             FROM "nexus_nexusressourcesyncstatus" U0
                             WHERE U0."service" = ("nexus_nexususer"."source")
                             ORDER BY RANDOM() ASC
                             LIMIT 1), %s) AS "_threshold"
          FROM "nexus_nexususer"
          WHERE ("nexus_nexususer"."updated_at" >= (COALESCE(
                                                               (SELECT U0."valid_since" AS "valid_since"
                                                                FROM "nexus_nexusressourcesyncstatus" U0
                                                                WHERE U0."service" = ("nexus_nexususer"."source")
                                                                ORDER BY RANDOM() ASC
                                                                LIMIT 1), %s))
                 AND "nexus_nexususer"."email" = %s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'get_service_users[nexus/utils.py]',
          'dropdown_status[nexus/utils.py]',
          'DropDownMiddleware.__call__[nexus/middleware.py]',
        ]),
        'sql': '''
          SELECT "nexus_activatedservice"."id",
                 "nexus_activatedservice"."user_id",
                 "nexus_activatedservice"."service",
                 "nexus_activatedservice"."created_at"
          FROM "nexus_activatedservice"
          WHERE "nexus_activatedservice"."user_id" = %s
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'dropdown_status[nexus/utils.py]',
          'DropDownMiddleware.__call__[nexus/middleware.py]',
        ]),
        'sql': '''
          (
             (SELECT %s AS "a"
              FROM "companies_companymembership"
              INNER JOIN "users_user" ON ("companies_companymembership"."user_id" = "users_user"."id")
              INNER JOIN "companies_company" ON ("companies_companymembership"."company_id" = "companies_company"."id")
              WHERE ("users_user"."is_active"
                     AND "companies_companymembership"."is_active"
                     AND "companies_company"."department" IN (%s,
                                                              %s,
                                                              %s,
                                                              %s,
                                                              %s,
                                                              %s,
                                                              %s,
                                                              %s)
                     AND "users_user"."email" = %s))
           UNION
             (SELECT %s AS "a"
              FROM "prescribers_prescribermembership"
              INNER JOIN "users_user" ON ("prescribers_prescribermembership"."user_id" = "users_user"."id")
              INNER JOIN "prescribers_prescriberorganization" ON ("prescribers_prescribermembership"."organization_id" = "prescribers_prescriberorganization"."id")
              WHERE ("users_user"."is_active"
                     AND "prescribers_prescribermembership"."is_active"
                     AND "prescribers_prescriberorganization"."department" IN (%s,
                                                                               %s,
                                                                               %s,
                                                                               %s,
                                                                               %s,
                                                                               %s,
                                                                               %s,
                                                                               %s)
                     AND "users_user"."email" = %s)))
          UNION
            (SELECT %s AS "a"
             FROM "nexus_nexusmembership"
             INNER JOIN "nexus_nexusstructure" ON ("nexus_nexusmembership"."structure_id" = "nexus_nexusstructure"."id")
             INNER JOIN "nexus_nexususer" ON ("nexus_nexusmembership"."user_id" = "nexus_nexususer"."id")
             WHERE ("nexus_nexusmembership"."updated_at" >= (COALESCE(
                                                                        (SELECT U0."valid_since" AS "valid_since"
                                                                         FROM "nexus_nexusressourcesyncstatus" U0
                                                                         WHERE U0."service" = ("nexus_nexusmembership"."source")
                                                                         ORDER BY RANDOM() ASC
                                                                         LIMIT 1), %s))
                    AND "nexus_nexusstructure"."department" IN (%s,
                                                                %s,
                                                                %s,
                                                                %s,
                                                                %s,
                                                                %s,
                                                                %s,
                                                                %s)
                    AND "nexus_nexususer"."email" = %s))
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'add_city_name_attr[search/models.py]',
          'EmployerSearchView.get_context_data[www/search_views/views.py]',
          'EmployerSearchView.get[www/search_views/views.py]',
        ]),
        'sql': '''
          SELECT "search_savedsearch"."id",
                 "search_savedsearch"."user_id",
                 "search_savedsearch"."name",
                 "search_savedsearch"."query_params",
                 "search_savedsearch"."created_at"
          FROM "search_savedsearch"
          WHERE "search_savedsearch"."user_id" = %s
          ORDER BY "search_savedsearch"."created_at" DESC
        ''',
      }),
      dict({
        'origin': list([
          'add_city_name_attr[search/models.py]',
          'EmployerSearchView.get_context_data[www/search_views/views.py]',
          'EmployerSearchView.get[www/search_views/views.py]',
        ]),
        'sql': '''
          SELECT "cities_city"."id",
                 "cities_city"."name",
                 "cities_city"."normalized_name",
                 "cities_city"."slug",
                 "cities_city"."department",
                 "cities_city"."post_codes",
                 "cities_city"."code_insee",
                 "cities_city"."coords",
                 "cities_city"."edition_mode",
                 "cities_city"."last_synced_at"
          FROM "cities_city"
          WHERE "cities_city"."slug" IN (%s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestSavedSearches.test_display_saved_searches_and_delete_modal[/search/job-descriptions/results][SQL queries]
  dict({
    'num_queries': 12,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."terms_accepted_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login",
                 "users_user"."upcoming_deletion_notified_at",
                 "users_user"."allow_next_sso_sub_update"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'get_active_company_memberships[utils/perms/middleware.py]',
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_companymembership"."id",
                 "companies_companymembership"."user_id",
                 "companies_companymembership"."joined_at",
                 "companies_companymembership"."is_admin",
                 "companies_companymembership"."is_active",
                 "companies_companymembership"."created_at",
                 "companies_companymembership"."updated_at",
                 "companies_companymembership"."company_id",
                 "companies_companymembership"."updated_by_id"
          FROM "companies_companymembership"
          WHERE ("companies_companymembership"."is_active"
                 AND "companies_companymembership"."user_id" = %s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'get_active_prescriber_memberships[utils/perms/middleware.py]',
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "prescribers_prescribermembership"."id",
                 "prescribers_prescribermembership"."user_id",
                 "prescribers_prescribermembership"."joined_at",
                 "prescribers_prescribermembership"."is_admin",
                 "prescribers_prescribermembership"."is_active",
                 "prescribers_prescribermembership"."created_at",
                 "prescribers_prescribermembership"."updated_at",
                 "prescribers_prescribermembership"."organization_id",
                 "prescribers_prescribermembership"."updated_by_id",
                 "prescribers_prescriberorganization"."id",
                 "prescribers_prescriberorganization"."address_line_1",
                 "prescribers_prescriberorganization"."address_line_2",
                 "prescribers_prescriberorganization"."post_code",
                 "prescribers_prescriberorganization"."city",
                 "prescribers_prescriberorganization"."department",
                 "prescribers_prescriberorganization"."coords",
                 "prescribers_prescriberorganization"."geocoding_score",
                 "prescribers_prescriberorganization"."geocoding_updated_at",
                 "prescribers_prescriberorganization"."ban_api_resolved_address",
                 "prescribers_prescriberorganization"."insee_city_id",
                 "prescribers_prescriberorganization"."name",
                 "prescribers_prescriberorganization"."created_at",
                 "prescribers_prescriberorganization"."updated_at",
                 "prescribers_prescriberorganization"."uid",
                 "prescribers_prescriberorganization"."active_members_email_reminder_last_sent_at",
                 "prescribers_prescriberorganization"."automatic_geocoding_update",
                 "prescribers_prescriberorganization"."siret",
                 "prescribers_prescriberorganization"."kind",
                 "prescribers_prescriberorganization"."is_brsa",
                 "prescribers_prescriberorganization"."phone",
                 "prescribers_prescriberorganization"."email",
                 "prescribers_prescriberorganization"."website",
                 "prescribers_prescriberorganization"."description",
                 "prescribers_prescriberorganization"."code_safir_pole_emploi",
                 "prescribers_prescriberorganization"."created_by_id",
                 "prescribers_prescriberorganization"."authorization_status",
                 "prescribers_prescriberorganization"."authorization_updated_at",
                 "prescribers_prescriberorganization"."authorization_updated_by_id",
                 "prescribers_prescriberorganization"."is_gps_authorized"
          FROM "prescribers_prescribermembership"
          INNER JOIN "prescribers_prescriberorganization" ON ("prescribers_prescribermembership"."organization_id" = "prescribers_prescriberorganization"."id")
          WHERE ("prescribers_prescribermembership"."is_active"
                 AND "prescribers_prescribermembership"."user_id" = %s)
          ORDER BY "prescribers_prescribermembership"."joined_at" ASC
        ''',
      }),
      dict({
        'origin': list([
          'get_active_institution_memberships[utils/perms/middleware.py]',
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "institutions_institutionmembership"."id",
                 "institutions_institutionmembership"."user_id",
                 "institutions_institutionmembership"."joined_at",
                 "institutions_institutionmembership"."is_admin",
                 "institutions_institutionmembership"."is_active",
                 "institutions_institutionmembership"."created_at",
                 "institutions_institutionmembership"."updated_at",
                 "institutions_institutionmembership"."institution_id",
                 "institutions_institutionmembership"."updated_by_id",
                 "institutions_institution"."id",
                 "institutions_institution"."address_line_1",
                 "institutions_institution"."address_line_2",
                 "institutions_institution"."post_code",
                 "institutions_institution"."city",
                 "institutions_institution"."department",
                 "institutions_institution"."coords",
                 "institutions_institution"."geocoding_score",
                 "institutions_institution"."geocoding_updated_at",
                 "institutions_institution"."ban_api_resolved_address",
                 "institutions_institution"."insee_city_id",
                 "institutions_institution"."name",
                 "institutions_institution"."created_at",
                 "institutions_institution"."updated_at",
                 "institutions_institution"."uid",
                 "institutions_institution"."active_members_email_reminder_last_sent_at",
                 "institutions_institution"."automatic_geocoding_update",
                 "institutions_institution"."kind"
          FROM "institutions_institutionmembership"
          INNER JOIN "institutions_institution" ON ("institutions_institutionmembership"."institution_id" = "institutions_institution"."id")
          WHERE ("institutions_institutionmembership"."is_active"
                 AND "institutions_institutionmembership"."user_id" = %s)
          ORDER BY "institutions_institutionmembership"."joined_at" ASC
        ''',
      }),
      dict({
        'origin': list([
          'get_service_users[nexus/utils.py]',
          'dropdown_status[nexus/utils.py]',
          'DropDownMiddleware.__call__[nexus/middleware.py]',
        ]),
        'sql': '''
          SELECT "nexus_nexususer"."id",
                 "nexus_nexususer"."source",
                 "nexus_nexususer"."source_id",
                 "nexus_nexususer"."source_kind",
                 "nexus_nexususer"."first_name",
                 "nexus_nexususer"."last_name",
                 "nexus_nexususer"."email",
                 "nexus_nexususer"."phone",
                 "nexus_nexususer"."last_login",
                 "nexus_nexususer"."auth",
                 "nexus_nexususer"."kind",
                 "nexus_nexususer"."updated_at",
                 COALESCE(
                            (SELECT U0."valid_since" AS "valid_since"
                             FROM "nexus_nexusressourcesyncstatus" U0
                             WHERE U0."service" = ("nexus_nexususer"."source")
                             ORDER BY RANDOM() ASC
                             LIMIT 1), %s) AS "_threshold"
          FROM "nexus_nexususer"
          WHERE ("nexus_nexususer"."updated_at" >= (COALESCE(
                                                               (SELECT U0."valid_since" AS "valid_since"
                                                                FROM "nexus_nexusressourcesyncstatus" U0
                                                                WHERE U0."service" = ("nexus_nexususer"."source")
                                                                ORDER BY RANDOM() ASC
                                                                LIMIT 1), %s))
                 AND "nexus_nexususer"."email" = %s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'get_service_users[nexus/utils.py]',
          'dropdown_status[nexus/utils.py]',
          'DropDownMiddleware.__call__[nexus/middleware.py]',
        ]),
        'sql': '''
          SELECT "nexus_activatedservice"."id",
                 "nexus_activatedservice"."user_id",
                 "nexus_activatedservice"."service",
                 "nexus_activatedservice"."created_at"
          FROM "nexus_activatedservice"
          WHERE "nexus_activatedservice"."user_id" = %s
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'dropdown_status[nexus/utils.py]',
          'DropDownMiddleware.__call__[nexus/middleware.py]',
        ]),
        'sql': '''
          (
             (SELECT %s AS "a"
              FROM "companies_companymembership"
              INNER JOIN "users_user" ON ("companies_companymembership"."user_id" = "users_user"."id")
              INNER JOIN "companies_company" ON ("companies_companymembership"."company_id" = "companies_company"."id")
              WHERE ("users_user"."is_active"
                     AND "companies_companymembership"."is_active"
                     AND "companies_company"."department" IN (%s,
                                                              %s,
                                                              %s,
                                                              %s,
                                                              %s,
                                                              %s,
                                                              %s,
                                                              %s)
                     AND "users_user"."email" = %s))
           UNION
             (SELECT %s AS "a"
              FROM "prescribers_prescribermembership"
              INNER JOIN "users_user" ON ("prescribers_prescribermembership"."user_id" = "users_user"."id")
              INNER JOIN "prescribers_prescriberorganization" ON ("prescribers_prescribermembership"."organization_id" = "prescribers_prescriberorganization"."id")
              WHERE ("users_user"."is_active"
                     AND "prescribers_prescribermembership"."is_active"
                     AND "prescribers_prescriberorganization"."department" IN (%s,
                                                                               %s,
                                                                               %s,
                                                                               %s,
                                                                               %s,
                                                                               %s,
                                                                               %s,
                                                                               %s)
                     AND "users_user"."email" = %s)))
          UNION
            (SELECT %s AS "a"
             FROM "nexus_nexusmembership"
             INNER JOIN "nexus_nexusstructure" ON ("nexus_nexusmembership"."structure_id" = "nexus_nexusstructure"."id")
             INNER JOIN "nexus_nexususer" ON ("nexus_nexusmembership"."user_id" = "nexus_nexususer"."id")
             WHERE ("nexus_nexusmembership"."updated_at" >= (COALESCE(
                                                                        (SELECT U0."valid_since" AS "valid_since"
                                                                         FROM "nexus_nexusressourcesyncstatus" U0
                                                                         WHERE U0."service" = ("nexus_nexusmembership"."source")
                                                                         ORDER BY RANDOM() ASC
                                                                         LIMIT 1), %s))
                    AND "nexus_nexusstructure"."department" IN (%s,
                                                                %s,
                                                                %s,
                                                                %s,
                                                                %s,
                                                                %s,
                                                                %s,
                                                                %s)
                    AND "nexus_nexususer"."email" = %s))
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'add_city_name_attr[search/models.py]',
          'JobDescriptionSearchView.get_context_data[www/search_views/views.py]',
          'JobDescriptionSearchView.get[www/search_views/views.py]',
        ]),
        'sql': '''
          SELECT "search_savedsearch"."id",
                 "search_savedsearch"."user_id",
                 "search_savedsearch"."name",
                 "search_savedsearch"."query_params",
                 "search_savedsearch"."created_at"
          FROM "search_savedsearch"
          WHERE "search_savedsearch"."user_id" = %s
          ORDER BY "search_savedsearch"."created_at" DESC
        ''',
      }),
      dict({
        'origin': list([
          'add_city_name_attr[search/models.py]',
          'JobDescriptionSearchView.get_context_data[www/search_views/views.py]',
          'JobDescriptionSearchView.get[www/search_views/views.py]',
        ]),
        'sql': '''
          SELECT "cities_city"."id",
                 "cities_city"."name",
                 "cities_city"."normalized_name",
                 "cities_city"."slug",
                 "cities_city"."department",
                 "cities_city"."post_codes",
                 "cities_city"."code_insee",
                 "cities_city"."coords",
                 "cities_city"."edition_mode",
                 "cities_city"."last_synced_at"
          FROM "cities_city"
          WHERE "cities_city"."slug" IN (%s)
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
